suite/tests/switch/valid/nested-case.c
int main(void)
{
    int a = 2;

    switch(2) {
	case 0: {
	    a++;
	    case 2:
		return 2;
	}
	return 0;

	case 1:
	    return 1;
    }
    return 3;
}
