suite/tests/switch/invalid/default-outside-switch.c
int main(void)
{
    switch (1) {
	case 1: return 0;
    }

	default: return 5;
	
}
